--- a/angularapp/angular.json
+++ b/angularapp/angular.json
@@ -90,6 +90,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/toastr.css",
               "src/styles.css"
             ],
             "scripts": [],
